Bug 124491 - FILEOPEN DOCX, Changes made to empty paragraphs are not tracked when docx is opened in Writer.
Summary: FILEOPEN DOCX, Changes made to empty paragraphs are not tracked when docx is ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-04-02 07:30 UTC by NISZ LibreOffice Team
Modified: 2019-09-03 08:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Document containing the above described problem. (20.51 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-04-02 07:32 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer. (87.77 KB, image/png)
2019-04-02 07:32 UTC, NISZ LibreOffice Team
Details
unit test file (only the first empty paragraph contains formatting change) (12.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-03 08:16 UTC, László Németh
Details
test file with paragraph style and numbering change in its empty paragraph (14.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-03 08:18 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-04-02 07:30:47 UTC
Description:
When changes are made in a change tracked docx in Word to an empty paragraph (formatting changes) they are not tracked when opened in Writer. The same changes appear as tracked on a non-empty paragraph.

Steps to Reproduce:
    1. Create a new docx in Word.
    2. Create some paragraphs and leave some empty.
    3. Change the color of both the empty and the paragraphs which have something written in them separately.
    4. Both of them are tracked in Word.
    5. Now open the document in Writer.

Actual Results:
The change made to the empty paragraph is nowhere to be seen. Not if you go to manage the changes and not on the side as a comment.

Expected Results:
All of the changes that are shown in Word should be visible some way in Writer as well.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details: Version: 6.3.0.0.alpha0+
Build ID: 65438bcda46bab4f2fe6fb555f44aace45e11e5e
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-04-02 07:32:10 UTC
Created attachment 150473 [details]
Document containing the above described problem.
Comment 2 NISZ LibreOffice Team 2019-04-02 07:32:47 UTC
Created attachment 150474 [details]
Screenshot of the original document side by side in Word and Writer.
Comment 3 László Németh 2019-04-25 12:51:25 UTC
Note: LibreOffice hides format changes of empty paragraphs in OpenDocument format, too.

Note 2: Other bug: LO doesn't import the format change of the last empty line from DOCX (without track changes, too).
Comment 4 Commit Notification 2019-09-02 05:48:47 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/00b3c2240bb2f86299e3ddeea75a16e8e9877489%5E%21

tdf#124491 DOCX: import tracked changes of empty paragraphs

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2019-09-03 08:16:08 UTC
Created attachment 153830 [details]
unit test file (only the first empty paragraph contains formatting change)
Comment 6 László Németh 2019-09-03 08:18:30 UTC
Created attachment 153831 [details]
test file with paragraph style and numbering change in its empty paragraph