tdf#124491 DOCX: import tracked changes of empty paragraphs

Formatting changes of empty paragraphs weren't imported.

Change-Id: Ife7c83d52549563ab4c3a00a3daff4d8f4fa8386